--- a/public/index.html
+++ b/public/index.html
@@ -37,16 +37,88 @@
         body { border-top: 16px solid #ffa100; }
       }
     </style>
+
+    <title>Akash's Portfolio Website</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- linking css file -->
+    <link rel="stylesheet" href="style.css">
+    <!-- bootstrap CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Completed!</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-    </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
+      <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
+        <div class="container">
+            <a class="navbar-brand" href="#">Akash Thakare</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.blog.akashthakare.com/" target="_blank">Blog</a>
+                    </li>
+                </ul>
+                
+            </div>
+        </div>
+    </nav>
 
+
+    <section class="bgimage" id="home">
+        <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 home-text">
+                  <h2 class="home_title">Hi! It's me Akash.</h2>
+                  <p class="home_desc">I am a Software Developer from India.</p>
+              </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="about">
+        <div class="container mt-4 pt-4">
+            <h1 class="text-center">About Me</h1>
+            <div class="row mt-4">
+                <div class="col-lg-4">
+                    <img src="images/about.jpeg" class= "imageAboutPage" alt="" width="250" height="250">
+                </div>
+
+                <div class="col-lg-8">
+                    <div class="row mt-3">
+                        <p>I am passionate about programming and problem solving, which drives me to create efficient and reliable solutions.</p>  
+                        <div class="col-md-6">
+                            <ul>
+                                <li><b>Name:</b> Akash Thakare</li>
+                                <li><b>Company:</b> Thoughtworks</li>
+                                <li><b>Occupation:</b> Software Developer</li>
+
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <p>
+                          I have contributed to several software projects in different companies in my career.  Also, I build projects for learning and exploring different technologies. When I am not immersed in programming, I indulge into Music, Chess, or Reading.
+                        </p>
+                        <p>
+                          Thank you for visiting my site.
+                        </p>
+                    </div>
+                </div>
+            </div>
+    </section>
+    
+
+    <script src="script/script.js"></script>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         const loadEl = document.querySelector('#load');
