--- a/public/index.html
+++ b/public/index.html
@@ -41,13 +41,10 @@
     <title>Akash's Portfolio Website</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- linking css file -->
-    <link rel="stylesheet" href="style.css">
-    <!-- bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- font awesome -->
-    <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
       <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
@@ -78,7 +75,7 @@
         <div class="container-fluid">
             <div class="row">
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 home-text">
-                  <h2 class="home_title">Hi! It's me Akash.</h2>
+                  <h2 class="home_title">Hey! Akash here.</h2>
                   <p class="home_desc">I am a Software Developer from India.</p>
               </div>
             </div>
@@ -87,15 +84,14 @@
 
     <section id="about">
         <div class="container mt-4 pt-4">
-            <h1 class="text-center">About Me</h1>
+            <h1 class="text-left">About Me</h1>
             <div class="row mt-4">
                 <div class="col-lg-4">
-                    <img src="images/about.jpeg" class= "imageAboutPage" alt="" width="250" height="250">
+                    <img src="images/about.jpeg" class= "imageAboutPage" alt="" width="350" height="350">
                 </div>
 
                 <div class="col-lg-8">
                     <div class="row mt-3">
-                        <p>I am passionate about programming and problem solving, which drives me to create efficient and reliable solutions.</p>  
                         <div class="col-md-6">
                             <ul>
                                 <li><b>Name:</b> Akash Thakare</li>
@@ -104,8 +100,16 @@
 
                             </ul>
                         </div>
+                        <div class="col-md-6">
+                          <ul>
+                              <li><b>Github:&nbsp;</b><a href="https://github.com/aakashthakare" target="_blank"><i class="fa fa-github"></i>&nbsp;aakashthakare</a></li>
+                              <li><b>Stackoverflow:&nbsp;</b> <a href="https://stackoverflow.com/users/1997093/akash" target="_blank"><i class="fa fa-stack-overflow"></i>&nbsp;akash</a></li>
+                              <li><b>LinkedIn:&nbsp;</b><a href="https://www.linkedin.com/in/aakashthakare/" target="_blank"><i class="fa fa-linkedin"></i>&nbsp;aakashthakare</a></li>
+                          </ul>
+                      </div>
                     </div>
                     <div class="row mt-3">
+                        <p>I am passionate about programming and problem solving, which drives me to create efficient and reliable solutions.</p>  
                         <p>
                           I have contributed to several software projects in different companies in my career.  Also, I build projects for learning and exploring different technologies. When I am not immersed in programming, I indulge into Music, Chess, or Reading.
                         </p>
