--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="https://www.blog.akashthakare.com/" target="_blank">Blog</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="doc/resume.pdf" target="_blank">Resume</a>
+                  </li>
                 </ul>
                 
             </div>
