Update resume and profile photo.

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
             <h1 class="text-left">About Me</h1>
             <div class="row mt-4">
                 <div class="col-lg-4">
-                    <img src="images/about.jpeg" class= "imageAboutPage">
+                    <img src="images/about.jpg" class= "imageAboutPage">
                 </div>
 
                 <div class="col-lg-8">
