--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
             <div class="row">
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 home-text">
                   <h2 class="home_title">Hey! Akash here.</h2>
-                  <p class="home_desc">I am a Software Developer from India.</p>
+                  <p class="home_desc">I am a Software Consultant from India.</p>
               </div>
             </div>
         </div>
