Update contact email

--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
                           <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="ac2f4891-ed3d-4cfb-be9e-58b0868e2db1" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
                         </div>
                         <span class="social-icon-container">
-                          <a class="social-icon" href="mailto:akashthakare@protonmail.com"><i class="fa fa-envelope"></i></a>&nbsp;
+                          <a class="social-icon" href="mailto:contact@akashthakare.com"><i class="fa fa-envelope"></i></a>&nbsp;
                           <a class="social-icon" href="https://github.com/aakashthakare" target="_blank"><i class="fa fa-github"></i></a>&nbsp;
                           <a class="social-icon" href="https://stackoverflow.com/users/1997093/akash" target="_blank"><i class="fa fa-stack-overflow"></i></a>&nbsp;
                           <a class="social-icon" href="https://www.linkedin.com/in/aakashthakare/" target="_blank"><i class="fa fa-linkedin"></i></a>&nbsp;
