deploy: a35c32b26ddf34a087bfca2143d56476d909f133

--- a/writing/index.html
+++ b/writing/index.html
@@ -6,13 +6,14 @@
   <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
   <style>
     html { scrollbar-gutter: stable; }
-    body { font-family: sans-serif; max-width: 700px; margin: auto; line-height: 1.6;color:#5A5A5A;}
-    footer { text-align: center; color: gray; }
+    body { font-family: sans-serif; max-width: 700px; margin: auto; line-height: 1.6;color:#333;}
+    footer { text-align: center; color: #a1a3ad; }
     nav ul { display: flex; list-style: none; padding: 0; margin: 0; padding:5px;}
     nav li { margin-right: 15px; }
     nav a { border-bottom: 3px solid transparent; text-decoration:none; padding-bottom:5px;color: inherit;}
     nav a.active { border-bottom-color: inherit; }
   </style>
+   <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
 </head>
 <body>
   <nav>
@@ -39,5 +40,8 @@
   <footer>
     <small >&copy; 2025 Akash Thakare</small>
   </footer>
+  <script>
+    mermaid.initialize({ startOnLoad: true });
+  </script>
 </body>
 </html>
