--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
   <style>
     html { scrollbar-gutter: stable; }
-    body { font-family: sans-serif; max-width: 700px; margin: auto; line-height: 1.6;color:#5A5A5A;}
-    footer { text-align: center; color: gray; }
+    body { font-family: sans-serif; max-width: 700px; margin: auto; line-height: 1.6;color:#333;}
+    footer { text-align: center; color: #a1a3ad; }
     nav ul { display: flex; list-style: none; padding: 0; margin: 0; padding:5px;}
     nav li { margin-right: 15px; }
     nav a { border-bottom: 3px solid transparent; text-decoration:none; padding-bottom:5px;color: inherit;}
     nav a.active { border-bottom-color: inherit; }
   </style>
+   <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
 </head>
 <body>
   <nav>
@@ -38,18 +39,21 @@ Hi, I’m Akash — a software consultant with a passion for solving complex pro
 </p>
 
 <p>
-Over the years, I’ve worked on diverse software projects, learning new technologies and refining my skills along the way.
+Currently serving at <a href="https://www.thoughtworks.com/" target="_blank">ThoughtWorks</a>, I collaborate with cross-functional teams to deliver high-impact software solutions, embracing agile methodologies and helping clients navigate complex technical and business challenges.
 </p>
 
 <p>
+Over the years, I’ve worked on diverse software projects, learning new technologies and refining my skills along the way.
 Whether architecting scalable cloud platforms, optimizing legacy systems, or advising on best-fit technologies, I am committed to driving efficiency and innovation.
 </p>
-
-<h3>Beyond Code</h3>
+<p>
 When I’m not coding, you’ll probably find me enjoying music, playing chess, or reading books. I believe the best work comes from staying curious and continuously learning.
-
+</p>
   <footer>
     <small >&copy; 2025 Akash Thakare</small>
   </footer>
+  <script>
+    mermaid.initialize({ startOnLoad: true });
+  </script>
 </body>
 </html>
