--- a/contact/index.html
+++ b/contact/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <title>Contact</title>
   <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+
   <style>
     html { scrollbar-gutter: stable; }
-    body { font-family: sans-serif; max-width: 700px; margin: auto; line-height: 1.6;color:#333;}
+    body { font-family: "Nunito", sans-serif; max-width: 700px; margin: auto; line-height: 1.6;color:#333;}
     footer { text-align: center; color: #a1a3ad; }
     nav ul { display: flex; list-style: none; padding: 0; margin: 0; padding:5px;}
     nav li { margin-right: 15px; }
